Task 4 my hoppies my age

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <body>
     <div class="wrapper">
       <div class="roles">
-        <div id="_dob">MY AGE</div>
-        <div id="_hobby">MY HOBBIES</div>
-        <div id="_funFact">SOME FUN FACTS ABOUT ME</div>
+        <div id="_dob"></div>
+        <div id="_hobby"> </div>
+        <div id="_funFact"> </div>
 
        
       </div>
@@ -29,7 +29,7 @@
       <div >
         <img id="_image" alt="Profile Image" class="profileImage"/>
       </div>
-      <div class="fn" id="_fullName">MY NAME</div>
+      <div class="fn" id="_fullName">Sulaiman Alsaleh</div>
 
     </div>
 
@@ -42,7 +42,7 @@
         <button onclick="mutateStars(-1)">-1</button>
         <button onclick="mutateStars(-2)">-2</button>
       </div>
-      <img width=300 id="stars" src="https://user-images.githubusercontent.com/8784343/133987243-93896911-a3f4-4be5-8889-22b2896f8d79.png">
+      <img width=300 id="stars" src="C:\Users\ASUS\OneDrive\Documents\JPEG">
     </div>
     <script type="text/javascript" src="./index.js"></script>
     <script type="text/javascript" src="./engine.js"></script>
